# airlock

./: .gitignore  CLAUDE.md  PROPOSAL.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
fixtures/: seed_dev_data.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  DataTable.tsx  Layout.tsx  StatusBadge.tsx
frontend/src/context/: RoleContext.tsx
frontend/src/pages/: KeyManagement.tsx  NewStudy.tsx  StudyDetail.tsx  StudyList.tsx
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_accession_mappings.py  003_add_temporal_policy.py  004_add_expiration_alert_date.py  005_add_researcher_intake.py  006_add_reidentification_requests.py  007_workflow_redesign.py
src/: audit.py  auth.py  config.py  database.py  main.py  models.py  notifications.py  schemas.py  security.py
src/routes/: _helpers.py  accessions.py  datasets.py  keys.py  patients.py  studies.py
tests/: conftest.py  test_accessions.py  test_datasets.py  test_keys.py  test_patients.py  test_security.py  test_studies.py
